tdf#78854 do not crash when undoing layout change

It turns out that the ordinal number adjustment that was added for
fdo#34548 is no longer necessary.

Change-Id: I2c491a008500b6a269b6f05a2a72f5aa70edecb2
(cherry picked from commit c0117fcb3dbd6c2a8d5e7679ee8d6fb29264ff6b)
Reviewed-on: https://gerrit.libreoffice.org/16152
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>